<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sparkcodingacademy.sudoku.MainActivity"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center"
    android:padding="40dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_label"

        />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_label"
        />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_label"
        />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_label"
        />

</LinearLayout>
